dashboard-k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: glance-service
  namespace: glance
spec:
  type: ClusterIP
  selector:
    app: glance
  ports:
    - name: http
      port: 8086
      targetPort: 8086
      protocol: TCP
